force-app/main/default/objects/FieloPLT__PointType__c/FieloPLT__PointType__c.object-meta.xml
<CustomObject>
    <description>Point Types comprise different kind of  non-monetary Points. They enable to create exchange units based on distance, time, currency, etc. instead of regular numeral Points.</description>
    <label>Point Type</label>
    <nameField>
        <label>Point Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Point Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>