force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__ConversionModeField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ConversionModeField__c</fullName>
    <description>The API name for the field that will store a Point Type&apos;s Conversion Mode (e.g. MileConversionMode__c)</description>
    <inlineHelpText>Enter the API name for the field that will store your Point Type&apos;s Conversion Mode (e.g. MileConversionMode__c).</inlineHelpText>
    <label>Conversion Mode Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>