force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__ConversionValueField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ConversionValueField__c</fullName>
    <description>The API name for the field that will store a Point Type&apos;s Conversion Value (e.g. MileConversionValue__c)</description>
    <inlineHelpText>Enter the API name for the field that will store your Point Type&apos;s Conversion Value (e.g. MileConversionValue__c).</inlineHelpText>
    <label>Conversion Value Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>