force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__MemberBalanceField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MemberBalanceField__c</fullName>
    <description>Field API name which keeps track of the specific Point type balance on &quot;Members&quot;. It connects Point type with &quot;Members&quot;.</description>
    <inlineHelpText>Enter the API name of the field which keeps track of the Point Type balance in Members (e.g. Miles__c).</inlineHelpText>
    <label>Member Balance field</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>