force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__MonthsUntilExpirationField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MonthsUntilExpirationField__c</fullName>
    <description>The API name for the field that will store a Point Type&apos;s Months Until Expiration value (e.g. MileMonthsuntilexpiration__c)</description>
    <inlineHelpText>Enter the API name for the field that will store your Point Type&apos;s Months Until Expiration value (e.g. MileMonthsuntilexpiration__c).</inlineHelpText>
    <label>Months Until Expiration Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>