force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__PointExpirationDateField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointExpirationDateField__c</fullName>
    <description>The API name for the field that will store a Point Type&apos;s Point Expiration Date (e.g. MilePointExpirationDate__c)</description>
    <inlineHelpText>Enter the API name for the field that will store your Point Type&apos;s Point Expiration Date (e.g. MilePointExpirationDate__c).</inlineHelpText>
    <label>Point Expiration Date Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>