force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__PointExpirationModeField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointExpirationModeField__c</fullName>
    <label>Point Expiration Mode Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>