force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__PointReflectionField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointReflectionField__c</fullName>
    <description>The API name for the field that will store a Point Type&apos;s Point Reflection Field (e.g. MilePointReflectionField__c)</description>
    <inlineHelpText>Enter the API name for the field that will store your Point Type&apos;s Point Reflection Field (e.g. MilePointReflectionField__c).</inlineHelpText>
    <label>Point Reflection Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>