force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__RecordFieldNameField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RecordFieldNameField__c</fullName>
    <description>The API name for the field that will store a Point Type&apos;s Record Field Name (e.g. MileRecordFieldName__c)</description>
    <inlineHelpText>Enter the API name for the field that will store your Point Type&apos;s Record Field Name (e.g. MileRecordFieldName__c).</inlineHelpText>
    <label>Record Field Name Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>