force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__RedemptionBalanceField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RedemptionBalanceField__c</fullName>
    <description>Field API name which keeps track of the specific Point type balance on Redemptions. It connects Point type with &quot;Redemptions&quot;.</description>
    <inlineHelpText>Enter the API name of the field which keeps track of the Point Type balance in Redemptions (e.g. Miles__c).</inlineHelpText>
    <label>Redemption Balance field</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>