force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__RedemptionItemBalanceField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RedemptionItemBalanceField__c</fullName>
    <description>Field API name which keeps track of the specific Point type balance on &quot;Redemption Item&quot;. It connects Point type with &quot;Redemption Item&quot;.</description>
    <inlineHelpText>Enter the API name of the field which keeps track of the Point Type balance in Redemption Items (e.g. Miles__c).</inlineHelpText>
    <label>Redemption Item Balance field</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>