force-app/main/default/objects/FieloPLT__PointType__c/fields/FieloPLT__RewardBalanceField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardBalanceField__c</fullName>
    <description>Field API name which keeps track of the specific Point type balance in &quot;Rewards&quot;. It connects Point type with &quot;Rewards&quot;.</description>
    <inlineHelpText>Enter the API name of the field which keeps track of the Point Type balance in Rewards (e.g. Miles__c).</inlineHelpText>
    <label>Reward Balance field</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>